--- a/.editorconfig
+++ b/.editorconfig
@@ -21,16 +21,34 @@ indent_size = 2
 indent_style = tab
 
 # ReST-Files
-[*.rst]
-indent_size = 3
+[*.{rst,rst.txt}]
+indent_size = 4
+max_line_length = 80
+
+# Markdown-Files
+[*.md]
+max_line_length = 80
 
 # YAML-Files
 [*.{yaml,yml}]
 indent_size = 2
 
+# NEON-Files
+[*.neon]
+indent_size = 2
+indent_style = tab
+
+#.eslintrc.json
+[.eslintrc.json]
+indent_size = 2
+indent_style = space
+
+# stylelint
+[.stylelintrc]
+indent_size = 2
+
 # package.json
-# .travis.yml
-[{package.json,.travis.yml}]
+[package.json]
 indent_size = 2
 
 # TypoScript
