--- a/composer.json
+++ b/composer.json
@@ -28,5 +28,13 @@
 	"require": {
 		"php": "^7.2 || ^8",
 		"typo3/cms-core": "^10.4 || ^11.5 || ^12.4"
+	},
+	"extra": {
+		"branch-alias": {
+			"dev-master": "2.0.x-dev"
+		},
+		"typo3/cms": {
+			"extension-key": "webcare"
+		}
 	}
 }
