--- a/composer.json
+++ b/composer.json
@@ -26,12 +26,12 @@
 	],
 	"readme": "README.md",
 	"require": {
-		"php": "^7.2 || ^8",
-		"typo3/cms-core": "^10.4 || ^11.5 || ^12.4"
+		"php": "^8.1",
+		"typo3/cms-core": "^12.4 || ^13.4"
 	},
 	"extra": {
 		"branch-alias": {
-			"dev-master": "2.0.x-dev"
+			"dev-master": "3.x-dev"
 		},
 		"typo3/cms": {
 			"extension-key": "webcare"
